k8s-conf-spec/hacher_Deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hasher-deploy
  labels:
    app: hasher-app
  annotations:
    fluxcd.io/tag.hasher-app: semver:~1.0
    fluxcd.io/automated: 'true'
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hasher-app
  template:
    metadata:
      labels:
        app: hasher-app
    spec:
      containers:
      - name: hasher-app
        image: rabah945/hasher:1.0.174
        ports:
        - containerPort: 80
