k8s-conf-spec/redis_Deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: redis
  name: redis-Deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
      - image: redis:alpine
        name: redis-container
        ports:
        - containerPort: 6379
        volumeMounts:
        - mountPath: /data
          name: redis-store
      volumes:
      - name: redis-store
        emptyDir: {}
