k8s-conf-spec/webui_Deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: webui-app
  name: webui-deploy
  namespace: dockercoin
  annotations:
    fluxcd.io/tag.webui-app: semver:~1.0
    fluxcd.io/automated: 'true'
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webui-app
  template:
    metadata:
      labels:
        app: webui-app
    spec:
      containers:
      - image: rabah945/webui:1.0.174
        name: webui-app
        ports:
        - containerPort: 80
          name: webui-port
