k8s-conf-spec/worker_Deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: worker-app
  name: worker-Deployment
  annotations:
    fluxcd.io/tag.worker-app: glob:1.0.*
    fluxcd.io/automated: 'true'
spec:
  replicas: 1
  selector:
    matchLabels:
      app: worker-app
  template:
    metadata:
      labels:
        app: worker-app
    spec:
      containers:
      - image: brahamirabah94/worker:1.0.1
        name: worker-app
