k8s-conf-spec/hacher_service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: hasher-app
  name: hacher-service
spec:
  ports:
  - port: 8083
    targetPort: 80
  selector:
    app: hasher-app
