k8s-conf-spec/rng_service.yml
apiVersion: v1
kind: Service
metadata:
  name: rng-Service
spec:
  selector:
    app: rng-app
  ports:
  - protocol: TCP
    port: 8082 
    targetPort: 80
  type: LoadBalancer
