k8s-conf-spec/webui-service.yml
kind: Service 
apiVersion: v1 
metadata: 
  name: webui-Service
spec: 
  selector: 
    app: webui
  ports: 
  - protocol: TCP 
    port: 8080 
    targetPort: 80 
  type: LoadBalancer
