k8s-conf-spec/worker_service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: worker-app
  name: worker-service
  namespace: dockercoin
spec:
  ports:
  - port: 8084
    targetPort: 80
  selector:
    app: worker-app
