k8s-conf-spec/kube-deployment.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: dockercoin
#hasher
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hasher-deploy
  namespace: dockercoin
  labels:
    app: hasher-app
  annotations:
    fluxcd.io/tag.hasher: semver:~1.0
    fluxcd.io/automated: 'true'
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hasher-app
  template:
    metadata:
      labels:
        app: hasher-app
    spec:
      containers:
      - name: hasher
        image: rabah945/hasher:1.0.1
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: hasher-app
  name: hasher
  namespace: dockercoin
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: hasher-app
#redis
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: redis
  name: redis
  namespace: dockercoin
spec:
  type: ClusterIP
  ports:
  - port: 6379
    targetPort: 6379
  selector:
    app: redis-app
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: redis-app
  name: redis-deploy
  namespace: dockercoin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis-app
  template:
    metadata:
      labels:
        app: redis-app
    spec:
      containers:
      - image: redis:alpine
        name: redis
        ports:
        - containerPort: 6379
        volumeMounts:
        - mountPath: /data
          name: redis-store
      volumes:
      - name: redis-store
        emptyDir: {}
#rng
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: rng-app
  name: rng-deploy
  namespace: dockercoin
  annotations:
    fluxcd.io/tag.rng: semver:~1.0
    fluxcd.io/automated: 'true'
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rng-app
  template:
    metadata:
      labels:
        app: rng-app
    spec:
      containers:
      - name: rng
        image: rabah945/rng:1.0.1
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: rng
  namespace: dockercoin
spec:
  type: ClusterIP
  selector:
    app: rng-app
  ports:
  - port: 80
    targetPort: 80
#webui
---
apiVersion: v1 
kind: Service
metadata: 
  name: webui
  namespace: dockercoin
spec: 
  selector: 
    app: webui-app
  ports: 
  - port: 8080
    targetPort: 80
  type: LoadBalancer
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: webui-app
  name: webui-deploy
  namespace: dockercoin
  annotations:
    fluxcd.io/tag.webui: semver:~1.0
    fluxcd.io/automated: 'true'
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webui-app
  template:
    metadata:
      labels:
        app: webui-app
    spec:
      containers:
      - image: rabah945/webui:1.0.1
        name: webui
        ports:
        - containerPort: 80
          name: webui-port
#worker
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: worker-app
  name: worker-deploy
  namespace: dockercoin
  annotations:
    fluxcd.io/tag.worker: semver:~1.0
    fluxcd.io/automated: 'true'
spec:
  replicas: 1
  selector:
    matchLabels:
      app: worker-app
  template:
    metadata:
      labels:
        app: worker-app
    spec:
      containers:
      - image: rabah945/worker:1.0.1
        name: worker
        ports:
        - containerPort: 80
          name: worker-port
---
apiVersion: v1
kind: Service
metadata: 
  labels: 
    app: worker-app
  name: worker
  namespace: dockercoin
spec: 
  type: ClusterIP
  selector: 
    app: worker-app
  ports:
  - port: 8083
    targetPort: 80
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: example-service
  namespace: dockercoin
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: www.devops-project-teolia.io
    http:
      paths:
      - path: /
        backend:
          serviceName: webui
          servicePort: 8080
